--- a/draft-pragmatics/Makefile
+++ b/draft-pragmatics/Makefile
@@ -9,6 +9,7 @@ pragmatics.ps: pragmatics.txt
 	paps pragmatics.txt --top-margin=21 --bottom-margin=21 > pragmatics.ps
 pragmatics.7: pragmatics.md
 	mmark --man pragmatics.md > pragmatics.7
+	ed pragmatics.7 < Edman
 pragmatics.txt pragmatics.html: pragmatics.xml
 	xml2rfc --text --html pragmatics.xml
 	sed -i -e '/\f/{n;s/^.\{5\}/RFD 1/}' pragmatics.txt
